<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_concat</name>
  <version>0.1.0</version>
  <description>Approximate-time concatenation of 5 KMUTT LiDAR topics into a single PointCloud2 for Fast-LIO.</description>
  <maintainer email="surachai@salvis.co.th">fibo5</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
